Perubahan Styling responsive dan css

--- a/top_up.html
+++ b/top_up.html
@@ -231,7 +231,7 @@
                                         <input type="button" class="btn btn-block btn-secondary"
                                             onclick="checkpassword()" value="Submit">
                                         <input type="button" name="previous"
-                                            class="btn btn-block btn-secondary action-button previous action-button-previous"
+                                            class="btn btn-block btn-secondary action-button previous action-button-previous past"
                                             value="Previous" />
                                     </fieldset>
                                 </form>
