--- a/top_up_management.html
+++ b/top_up_management.html
@@ -314,6 +314,7 @@
               <thead>
                 <tr>
                   <th>No</th>
+                  <th>ID</th>
                   <th>Action</th>
                   <th>Username</th>
                   <th>Total Nominal (Rp)</th>
@@ -324,14 +325,14 @@
               <tbody>
                 <tr>
                   <td>1</td>
+                  <td>1</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Budi</td>
                   <td>10000</td>
@@ -340,14 +341,14 @@
                 </tr>
                 <tr>
                   <td>2</td>
+                  <td>2</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Joko</td>
                   <td>15000</td>
@@ -356,14 +357,14 @@
                 </tr>
                 <tr>
                   <td>3</td>
+                  <td>3</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Antok</td>
                   <td>150000</td>
@@ -372,14 +373,14 @@
                 </tr>
                 <tr>
                   <td>4</td>
+                  <td>4</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Amelia</td>
                   <td>100000</td>
@@ -388,14 +389,14 @@
                 </tr>
                 <tr>
                   <td>5</td>
+                  <td>5</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Daniel</td>
                   <td>25000</td>
@@ -404,14 +405,14 @@
                 </tr>
                 <tr>
                   <td>6</td>
+                  <td>6</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Kevin</td>
                   <td>10000</td>
@@ -420,14 +421,14 @@
                 </tr>
                 <tr>
                   <td>7</td>
+                  <td>6</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Kevin</td>
                   <td>10000</td>
@@ -436,14 +437,14 @@
                 </tr>
                 <tr>
                   <td>8</td>
+                  <td>7</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Naix</td>
                   <td>12000</td>
@@ -452,14 +453,14 @@
                 </tr>
                 <tr>
                   <td>9</td>
+                  <td>8</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Emilia</td>
                   <td>20000</td>
@@ -468,14 +469,14 @@
                 </tr>
                 <tr>
                   <td>10</td>
+                  <td>9</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
-                      <i class="fas fa-check"></i>
-                    </button>
-                    |
-                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
-                      <i class="fas fa-ban"></i>
-                    </button>
+                    <div class="btn-group btn-group-sm">
+                      <button data-toggle="modal" onclick="confirmclick()" class="btn btn-success" title="Edit"><i
+                          class="fas fa-check"></i></button>
+                      <button data-toggle="modal" onclick="cancelclick()" class="btn btn-danger" title="Delete"><i
+                          class="fas fa-ban"></i></a>
+                    </div>
                   </td>
                   <td>Thor</td>
                   <td>15000</td>
