--- a/donation.html
+++ b/donation.html
@@ -143,7 +143,9 @@
             </div>
             <!-- /.card-body -->
             <div class="card-footer">
-              <button type="submit" class="btn btn-info float-right">Submit</button>
+              <div class="btn-submitform">
+              <input class="btn btn-info float-right" type="submit" value="submit" onclick="submitdonate()">
+            </div>
             </div>
             <!-- /.card-footer -->
           </form>
@@ -175,6 +177,8 @@
   <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
   <script type="text/javascript" src="./assets/js/modal.js"></script>
   <script type="text/javascript" src="./assets/js/donation.js"></script>
+   <!-- Sweeet Alert -->
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 
 </html>
