--- a/donate_management.html
+++ b/donate_management.html
@@ -82,8 +82,8 @@
                                                 <td class="text-center">1</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
-                                                      <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
+                                                      <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                      <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra@....</td>
@@ -97,7 +97,8 @@
                                                 <td class="text-center">2</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                     <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                        <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                        <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Tika@...</td>
@@ -111,8 +112,8 @@
                                             <td class="text-center">3</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
-                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
+                                                    <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                 </div>
                                             </td>
                                             <td>Kevin@...</td>
@@ -126,8 +127,8 @@
                                             <td class="text-center">4</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
-                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
+                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                 </div>
                                             </td>
                                             <td>Jayson@...</td>
@@ -141,7 +142,8 @@
                                             <td class="text-center">5</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                 </div>
                                             </td>
                                             <td>Naufal@...</td>
@@ -155,8 +157,8 @@
                                             <td class="text-center">6</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                  <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
-                                                  <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
+                                                <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true" onclick="accept()"></i></a>
+                                                  <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true" onclick="cancel()"></i></a>
                                                 </div>
                                             </td>
                                             <td>Dayan@...</td>
@@ -216,6 +218,11 @@
    <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
    <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
    <script src="./assets/js/dtpage.js"></script>
+
+    <!-- CDN Sweet Alert 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- Rent Management JS -->
+     <script src="./assets/js/donate_management.js" type="text/javascript"></script>
 
 </body>
 
