--- a/top_up_management.html
+++ b/top_up_management.html
@@ -32,6 +32,7 @@
 
   <link rel="icon" href="./assets/media/icon/favicons.ico" />
   <link rel="stylesheet" href="./assets/css/usermanagement.css" />
+  <link rel="stylesheet" href="./assets/css/top-up-management.css" />
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -144,7 +145,7 @@
                 </div>
                 <div class="col-lg-7">
                   <div class="form-group">
-                    <div class="radio-group">
+                    <div class="radio-group method">
                       <div class="row row-cols-md-3" style="text-align: center;">
                         <div class="icheck-primary">
                           <input type="radio" name="option2" id="option-method1" value="Credit Card" />
@@ -161,17 +162,17 @@
                           <label for="option3" style="font-weight: normal;">OVO</label>
                         </div>
 
-                        <div class="icheck-primary">
+                        <div class="icheck-primary gopay">
                           <input type="radio" name="option2" id="option-method4" value="Gopay" />
                           <label for="option4" style="font-weight: normal;">Gopay</label>
                         </div>
 
-                        <div class="icheck-primary">
+                        <div class="icheck-primary dana">
                           <input type="radio" name="option2" id="option-method5" value="Dana" />
                           <label for="option5" style="font-weight: normal;">Dana</label>
                         </div>
 
-                        <div class="icheck-primary">
+                        <div class="icheck-primary cash">
                           <input type="radio" name="option2" id="option-method6" value="Cash" />
                           <label for="option6" style="font-weight: normal;">Cash</label>
                         </div>
