--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
 
 </head>
@@ -45,7 +45,7 @@
             <div class="col-lg-12">
                 <div class="profile-account">
                     <div class="picture">
-                        <img src="/assets/media/user/profile.png" alt="">
+                        <img src="./assets/media/user/profile.png" alt="">
                     </div>
                     <a href="#container-editform">
                     <button type="button" class="btn btn-primary edit-profile">Edit Profile</button>
