action rent_management

--- a/rent_management.html
+++ b/rent_management.html
@@ -170,7 +170,12 @@
                                             <tr>
                                                 <td class="text-center">5</td>
                                                 <td class="text-center py-0 align-middle">
-                                                    -
+                                                    <div class="btn-group btn-group-sm">
+                                                        <a href="#" class="btn btn-primary" onclick="acceptRent()"
+                                                            title="Accept"><i class="fas fa-check-square"></i></a>
+                                                        <a href="#" class="btn btn-danger" onclick="cancelRent()" title="Cancel"><i
+                                                                class="fas fa-window-close"></i></a>
+                                                    </div>
                                                 </td>
                                                 <td>005</td>
                                                 <td>Chandra</td>
